--- a/src/스마트스토어 전송기.ini
+++ b/src/스마트스토어 전송기.ini
@@ -1,13 +1,15 @@
 위 정보로 스마트스토어전송기와 쿠팡전송기에서 전송이력이 확인되었습니다.
 
 스마트스토어 전송기
-도매매아이디: sns@186397
-도매매상품번호: 10380657
-상품명: 에어컨 실외기 햇빛차단 은박 덮개
-전송일시: 2021-07-27 22:26:26
+도매매아이디: jienkim1
+도매매상품번호: 13862746
+상품명: 에어컨 실외기 커버 절전 덮개 열차단 차양막 차광막
+전송일시: 2021-05-20 23:45:36
 
 쿠팡전송기
-도매매아이디: sns@186397
-도매매상품번호: 10380657
-에어컨 실외기 햇빛차단 은박 덮개
-전송일시: 2021-07-27 22:26:26
+도매매아이디: jienkim1
+도매매상품번호: 13862746
+상품명: 에어컨 실외기 커버 절전 덮개 열차단 차양막 차광막
+전송일시: 2021-05-20 23:45:36
+
+SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='dzqf22' and itemNo='13656926' limit 0,1
