--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "sass": "^1.50.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
