--- a/src/스마트스토어 전송기.ini
+++ b/src/스마트스토어 전송기.ini
@@ -1,15 +1,32 @@
 위 정보로 스마트스토어전송기와 쿠팡전송기에서 전송이력이 확인되었습니다.
 
 스마트스토어 전송기
-도매매아이디: jienkim1
-도매매상품번호: 13862746
-상품명: 에어컨 실외기 커버 절전 덮개 열차단 차양막 차광막
-전송일시: 2021-05-20 23:45:36
+도매매아이디: skc8811
+도매매상품번호: 18457738
+상품명: 메탈집게핀 헤어핀 올림머리 바나나 유광 2종세트
+전송일시: 2021-12-28 12:52:43
+
 
 쿠팡전송기
-도매매아이디: jienkim1
-도매매상품번호: 13862746
-상품명: 에어컨 실외기 커버 절전 덮개 열차단 차양막 차광막
-전송일시: 2021-05-20 23:45:36
+도매매아이디: skc8811
+도매매상품번호: 19385424
+상품명: 리카타 MX 실버블렛 장타 스티커 20매 패키지
+전송일시: 2021-07-09 13:11:35
 
-SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='dzqf22' and itemNo='13656926' limit 0,1
+위 정보로 스피드고전송기에서 전송이력 확인 안됩니다.
+
+SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
+SELECT * FROM `dmm_sendSmartStoreLog2021` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
+
+SELECT * FROM `dmm_sendCoupangLog` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2021` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2022` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
+
+SELECT * FROM `dmm_sendElevenstLog` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
+
+SELECT * FROM `dmm_sendSsgLog` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
+SELECT * FROM `dmm_sendSsgLog2022` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
+
+SELECT * FROM `dmm_sendLotteonLog` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
+
+SELECT * FROM `dmm_sendWmpLog` where dmm_id='skc8811' and itemNo='19385424' limit 0,10
