--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.0",
     "axios": "^0.26.1",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "http-proxy-middleware": "^2.0.6",
+    "node-sass": "npm:sass@^1.51.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.50.1",
+    "sass": "^1.51.0",
+    "stream": "^0.0.2",
+    "timers": "^0.1.1",
+    "utill": "^0.1.3",
     "web-vitals": "^2.1.4",
     "whatwg-fetch": "^3.6.2"
   },
