--- a/package.json
+++ b/package.json
@@ -3,21 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.15.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.20.0",
-    "axios": "^0.26.1",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-actions": "^2.6.2",
+    "antd": "^4.20.2",
+    "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "http-proxy-middleware": "^2.0.6",
+    "loadash": "^1.0.0",
     "node-sass": "npm:sass@^1.51.0",
-    "react": "^18.0.0",
+    "react": "^18.1.0",
     "react-dom": "^18.0.0",
+    "react-particles-js": "^3.6.0",
+    "react-redux": "^8.0.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^5.3.1",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
+    "redux-actions": "^2.6.5",
     "sass": "^1.51.0",
     "stream": "^0.0.2",
     "timers": "^0.1.1",
+    "tsparticles": "^2.0.6",
     "utill": "^0.1.3",
     "web-vitals": "^2.1.4",
     "whatwg-fetch": "^3.6.2"
@@ -47,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "tsparticles": "^2.0.6"
   }
 }
