--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
+    "hoist-non-react-statics": "^3.3.2",
     "http-proxy-middleware": "^2.0.6",
     "loadash": "^1.0.0",
     "node-sass": "npm:sass@^1.51.0",
+    "nprogress": "^0.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
     "react-particles-js": "^3.6.0",
