--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "antd": "^4.20.2",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "events": "^3.3.0",
     "hoist-non-react-statics": "^3.3.2",
     "http-proxy-middleware": "^2.0.6",
@@ -20,6 +22,7 @@
     "nprogress": "^0.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-particles-js": "^3.6.0",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
