--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hoist-non-react-statics": "^3.3.2",
     "http-proxy-middleware": "^2.0.6",
     "loadash": "^1.0.0",
+    "moment": "^2.29.3",
     "node-sass": "npm:sass@^1.51.0",
     "nprogress": "^0.2.0",
     "react": "^18.1.0",
