--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
+    "redux-persist": "^6.0.0",
     "sass": "^1.51.0",
     "stream": "^0.0.2",
     "timers": "^0.1.1",
