--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "buffer": "^6.0.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "echarts": "^5.3.2",
     "events": "^3.3.0",
     "hoist-non-react-statics": "^3.3.2",
     "html-to-draftjs": "^1.5.0",
     "http-proxy-middleware": "^2.0.6",
     "loadash": "^1.0.0",
-    "moment": "^2.29.3",
+    "moment": "^2.18.1",
     "node-sass": "npm:sass@^1.51.0",
     "nprogress": "^0.2.0",
     "react": "^18.1.0",
