--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "timers": "^0.1.1",
     "tsparticles": "^2.0.6",
     "utill": "^0.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "whatwg-fetch": "^3.6.2"
   },
