--- a/src/스마트스토어 전송기.ini
+++ b/src/스마트스토어 전송기.ini
@@ -1,56 +1,71 @@
 위 정보로 스마트스토어전송기와 쿠팡전송기에서 전송이력이 확인되었습니다.
 
 스마트스토어 전송기
-도매매아이디: sns@396466
-도매매상품번호: 18457738
-상품명: 올림머리 바나나 헤어핀 유광 메탈집게핀 2종세트
-전송일시: 2021-12-01 08:02:47
+도매매아이디: yongyongec
+도매매상품번호: 13004983
+상품명: 켈윈 퍼터커버 KW-PC323 자석탈착 모든 34인치 호환
+전송일시: 2021-04-07 14:50:37
 
 쿠팡전송기
-도매매아이디: sns@396466
-도매매상품번호: 18457738
-상품명: 올림머리 바나나 헤어핀 유광 메탈집게핀 2종세트
-전송일시: 2021-12-01 08:02:47
+도매매아이디: yongyongec
+도매매상품번호: 13004983
+상품명: [무료배송]슈맥스 스테인레스 이중면기 2종세트
+전송일시: 2021-08-27 17:25:56
+
+11번가전송기
+도매매아이디: yongyongec
+도매매상품번호: 13004983
+상품명: 슈맥스 스테인레스 이중면기 2종세트
+전송일시: 2021-09-03 16:22:28
 
 SSG닷컴전송기
-도매매아이디: sns@396466
-도매매상품번호: 18457738
-상품명: 올림머리 바나나 헤어핀 유광 메탈집게핀 2종세트
-전송일시: 2021-12-01 08:02:48
+도매매아이디: yongyongec
+도매매상품번호: 13004983
+상품명: 무료배송슈맥스 스테인레스 이중면기 2종세트
+전송일시: 2021-08-27 17:25:57
 
-위 정보로 스피드고전송기에서 전송이력 확인 안됩니다.
-
-SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='wij700' and itemNo='7518205' limit 0,10
-SELECT * FROM `dmm_sendSmartStoreLog2021` where dmm_id='wij700' and itemNo='7518205' limit 0,10
-
-SELECT * FROM `dmm_sendCoupangLog` where dmm_id='wij700' and itemNo='7518205' limit 0,10
-SELECT * FROM `dmm_sendCoupangLog2021` where dmm_id='wij700' and itemNo='7518205' limit 0,10
-SELECT * FROM `dmm_sendCoupangLog2022` where dmm_id='wij700' and itemNo='7518205' limit 0,10
-
-SELECT * FROM `dmm_sendElevenstLog` where dmm_id='wij700' and itemNo='7518205' limit 0,10
-
-SELECT * FROM `dmm_sendSsgLog` where dmm_id='wij700' and itemNo='7518205' limit 0,10
-SELECT * FROM `dmm_sendSsgLog2022` where dmm_id='wij700' and itemNo='7518205' limit 0,10
-
-SELECT * FROM `dmm_sendLotteonLog` where dmm_id='wij700' and itemNo='7518205' limit 0,10
-
-SELECT * FROM `dmm_sendWmpLog` where dmm_id='wij700' and itemNo='7518205' limit 0,10
+롯데ON전송기
+도매매아이디: yongyongec
+도매매상품번호: 13004983
+상품명: 슈맥스 스테인레스 이중면기 2종세트
+전송일시: 2021-08-27 17:25:59
 
 
 
+위 정보로 스피드고전송기에서 전송이력이 확인 안됩니다.
 
-SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
-SELECT * FROM `dmm_sendSmartStoreLog2021` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
+SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+SELECT * FROM `dmm_sendSmartStoreLog2021` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
 
-SELECT * FROM `dmm_sendCoupangLog` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
-SELECT * FROM `dmm_sendCoupangLog2021` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
-SELECT * FROM `dmm_sendCoupangLog2022` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2021` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2022` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
 
-SELECT * FROM `dmm_sendElevenstLog` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
+SELECT * FROM `dmm_sendElevenstLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
 
-SELECT * FROM `dmm_sendSsgLog` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
-SELECT * FROM `dmm_sendSsgLog2022` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
+SELECT * FROM `dmm_sendSsgLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+SELECT * FROM `dmm_sendSsgLog2022` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
 
-SELECT * FROM `dmm_sendLotteonLog` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
+SELECT * FROM `dmm_sendLotteonLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
 
-SELECT * FROM `dmm_sendWmpLog` where dmm_id='sns@396466' and itemName LIKE '%메탈집게핀%' limit 0,10
+SELECT * FROM `dmm_sendWmpLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+
+
+
+
+SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendSmartStoreLog2021` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+
+SELECT * FROM `dmm_sendCoupangLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2021` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2022` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+
+SELECT * FROM `dmm_sendElevenstLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+
+SELECT * FROM `dmm_sendSsgLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendSsgLog2022` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+
+SELECT * FROM `dmm_sendLotteonLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+
+SELECT * FROM `dmm_sendWmpLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+
