--- a/src/스마트스토어 전송기.ini
+++ b/src/스마트스토어 전송기.ini
@@ -1,32 +1,32 @@
 위 정보로 스마트스토어전송기와 쿠팡전송기에서 전송이력이 확인되었습니다.
 
 스마트스토어 전송기
-도매매아이디: yongyongec
-도매매상품번호: 13004983
-상품명: 켈윈 퍼터커버 KW-PC323 자석탈착 모든 34인치 호환
-전송일시: 2021-04-07 14:50:37
+도매매아이디: allbgift
+도매매상품번호: 13656926
+상품명: 에어컨 실외기 커버 절전 덮개 열차단 차양막 차광막
+전송일시: 2021-07-26 12:37:39
 
 쿠팡전송기
-도매매아이디: yongyongec
-도매매상품번호: 13004983
-상품명: [무료배송]슈맥스 스테인레스 이중면기 2종세트
-전송일시: 2021-08-27 17:25:56
+도매매아이디: sns@214948
+도매매상품번호: 12501014
+상품명: 보랄 신혼부부 1인2인가구 집들이선물 스텐 더 셰프 6L 에어프라이어 BR-P260AF
+전송일시: 2021-02-18 02:49:28
 
 11번가전송기
-도매매아이디: yongyongec
-도매매상품번호: 13004983
-상품명: 슈맥스 스테인레스 이중면기 2종세트
-전송일시: 2021-09-03 16:22:28
+도매매아이디: sns@214948
+도매매상품번호: 12501014
+상품명: 보랄 신혼부부 1인2인가구 집들이선물 스텐 더 셰프 6L 에어프라이어 BR-P260AF
+전송일시: 2021-03-10 23:47:33
 
 SSG닷컴전송기
-도매매아이디: yongyongec
-도매매상품번호: 13004983
+도매매아이디: sns@214948
+도매매상품번호: 12501014
 상품명: 무료배송슈맥스 스테인레스 이중면기 2종세트
 전송일시: 2021-08-27 17:25:57
 
 롯데ON전송기
-도매매아이디: yongyongec
-도매매상품번호: 13004983
+도매매아이디: sns@214948
+도매매상품번호: 12501014
 상품명: 슈맥스 스테인레스 이중면기 2종세트
 전송일시: 2021-08-27 17:25:59
 
@@ -34,38 +34,38 @@ SSG닷컴전송기
 
 위 정보로 스피드고전송기에서 전송이력이 확인 안됩니다.
 
-SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
-SELECT * FROM `dmm_sendSmartStoreLog2021` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='allbgift' and itemNo='13656926' limit 0,10
+SELECT * FROM `dmm_sendSmartStoreLog2021` where dmm_id='sns@214948' and itemNo='12501014' limit 0,10
 
-SELECT * FROM `dmm_sendCoupangLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
-SELECT * FROM `dmm_sendCoupangLog2021` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
-SELECT * FROM `dmm_sendCoupangLog2022` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog` where dmm_id='sns@214948' and itemNo='12501014' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2021` where dmm_id='sns@214948' and itemNo='12501014' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2022` where dmm_id='sns@214948' and itemNo='12501014' limit 0,10
 
-SELECT * FROM `dmm_sendElevenstLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+SELECT * FROM `dmm_sendElevenstLog` where dmm_id='sns@214948' and itemNo='12501014' limit 0,10
 
-SELECT * FROM `dmm_sendSsgLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
-SELECT * FROM `dmm_sendSsgLog2022` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+SELECT * FROM `dmm_sendSsgLog` where dmm_id='sns@214948' and itemNo='12501014' limit 0,10
+SELECT * FROM `dmm_sendSsgLog2022` where dmm_id='sns@214948' and itemNo='12501014' limit 0,10
 
-SELECT * FROM `dmm_sendLotteonLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
+SELECT * FROM `dmm_sendLotteonLog` where dmm_id='sns@214948' and itemNo='12501014' limit 0,10
 
-SELECT * FROM `dmm_sendWmpLog` where dmm_id='yongyongec' and itemNo='13004983' limit 0,10
-
-
+SELECT * FROM `dmm_sendWmpLog` where dmm_id='sns@214948' and itemNo='12501014' limit 0,10
 
 
-SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
-SELECT * FROM `dmm_sendSmartStoreLog2021` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
 
-SELECT * FROM `dmm_sendCoupangLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
-SELECT * FROM `dmm_sendCoupangLog2021` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
-SELECT * FROM `dmm_sendCoupangLog2022` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
 
-SELECT * FROM `dmm_sendElevenstLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendSmartStoreLog` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendSmartStoreLog2021` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
 
-SELECT * FROM `dmm_sendSsgLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
-SELECT * FROM `dmm_sendSsgLog2022` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2021` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendCoupangLog2022` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
 
-SELECT * FROM `dmm_sendLotteonLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendElevenstLog` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
 
-SELECT * FROM `dmm_sendWmpLog` where dmm_id='yongyongec' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendSsgLog` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
+SELECT * FROM `dmm_sendSsgLog2022` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
+
+SELECT * FROM `dmm_sendLotteonLog` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
+
+SELECT * FROM `dmm_sendWmpLog` where dmm_id='sns@214948' and itemName LIKE '%34인치%' limit 0,10
 
